# SoTOHE-core

./: .dockerignore  .gitignore  .repomixignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPER_AI_WORKFLOW.md  Dockerfile  LOCAL_DEVELOPMENT.md  Makefile.toml  README.md  START_HERE_HUMAN.md  TAKT_TRACK_TRACEABILITY.md  TRACK_TRACEABILITY.md  architecture-rules.json  clippy.toml  compose.ci.yml  compose.dev.yml  compose.yml  deny.toml  requirements-python.txt  ruff.toml  rustfmt.toml
apps/cli/: .gitignore  Cargo.toml
apps/cli-composition/: Cargo.toml
apps/cli-composition/src/: arch.rs  cmd_outcome.rs  conventions.rs  demo.rs  domain.rs  dry.rs  dry_driver_adapter.rs  dry_fix_runner.rs  error.rs  file.rs  git.rs  guard.rs  hook.rs  lib.rs  make.rs  plan.rs  pr.rs  ref_verify.rs  semantic_dup.rs  semantic_dup_driver_adapter.rs  signal.rs  signal_layer_chain.rs  task_contract.rs  telemetry.rs  telemetry_wiring.rs  verify.rs
apps/cli-composition/src/dry/: corpus_root.rs  dry_checker_config.rs  manifest.rs  persistent_index.rs  shared.rs  shim.rs  tier_telemetry.rs  types.rs
apps/cli-composition/src/pr/: poll.rs  poll_adapters.rs
apps/cli-composition/src/ref_verify/: runner.rs
apps/cli-composition/src/review_v2/: approved.rs  briefing.rs  commit_hash.rs  helpers.rs  inputs.rs  mod.rs  null_reviewer.rs  results.rs  run.rs  run_fix.rs  scope.rs  shared.rs  shim.rs
apps/cli-composition/src/semantic_dup/: build.rs  check.rs  common.rs  find_similar.rs  measure_quality.rs  mod.rs
apps/cli-composition/src/signal/: gate_check.rs  mod.rs  service_impl.rs  shim.rs  tests.rs
apps/cli-composition/src/track/: branch_strategy.rs  composition_root.rs  fixpoint_resolve.rs  mod.rs  ops.rs  resolution.rs  service_impl.rs  set_commit_hash.rs  shim.rs  tddd.rs  tddd_catalogue_lint.rs
apps/cli/src/: error.rs  main.rs
apps/cli/src/commands/: arch.rs  catalogue_lint.rs  conventions.rs  domain.rs  dry.rs  file.rs  git.rs  guard.rs  hook.rs  lock.rs  make.rs  make_dry_fix.rs  make_review_fix.rs  make_tests.rs  mod.rs  pr.rs  pr_tests.rs  ref_verify.rs  review.rs  semantic_dup.rs  spec.rs  task_contract.rs  telemetry.rs  track.rs  verify.rs  verify_catalogue_spec_refs.rs  verify_tests.rs
apps/cli/tests/: cli_adr_signals.rs  cli_catalogue_lint.rs  cli_track_lint.rs  file_write_atomic.rs  hook_dispatch.rs  transition_integration.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
libs/domain/: Cargo.toml
libs/domain/src/: auto_phase.rs  branch_strategy.rs  chain.rs  decision.rs  domain_types.rs  dry_check.rs  error.rs  git_ref.rs  ids.rs  impl_plan.rs  lib.rs  plan.rs  repository.rs  review.rs  schema.rs  semantic_dup.rs  signal.rs  skill_compliance.rs  spec.rs  spec_file_loader_port.rs  symlink_guard_port.rs  task_contract.rs  task_coverage.rs  timestamp.rs  track.rs  track_phase.rs  verify.rs
libs/domain/src/adr_decision/: common.rs  entry.rs  evaluator.rs  file_port.rs  front_matter.rs  grounds.rs  mod.rs  state.rs  verify_report.rs
libs/domain/src/dry_check/: coverage.rs  diff.rs  finding.rs  fragment.rs  ports.rs  record.rs  value_objects.rs  verdict.rs
libs/domain/src/guard/: mod.rs  parser.rs  policy.rs  port.rs  text.rs  types.rs  verdict.rs
libs/domain/src/hook/: error.rs  mod.rs  types.rs  verdict.rs
libs/domain/src/lock/: error.rs  guard.rs  mod.rs  port.rs  types.rs
libs/domain/src/plan_ref/: adr_ref.rs  convention_ref.rs  informal_ground_ref.rs  mod.rs  spec_ref.rs
libs/domain/src/review/: concern.rs  error.rs  escalation.rs  mod.rs  state.rs  tests.rs  types.rs
libs/domain/src/review_v2/: error.rs  mod.rs  ports.rs  scope_config.rs  tests.rs  types.rs
libs/domain/src/skill_compliance/: mod.rs  tests.rs
libs/domain/src/tddd/: baseline.rs  baseline_document.rs  baseline_graph_ports.rs  catalogue.rs  catalogue_linter.rs  catalogue_linter_eval.rs  catalogue_linter_eval_helpers.rs  catalogue_linter_eval_primitives.rs  catalogue_linter_helpers.rs  catalogue_linter_preset.rs  catalogue_linter_role.rs  catalogue_ports.rs  catalogue_spec_signal.rs  catalogue_to_extended_crate_port.rs  consistency.rs  contract_map_content.rs  contract_map_options.rs  contract_map_render.rs  contract_map_render_tests.rs  contract_map_renderer.rs  extended_crate.rs  layer_id.rs  mod.rs  new_typegraph_codec_error.rs  primitive_occurrence_scanner.rs  semantic_verify.rs  signals.rs  type_signals_doc.rs
libs/infrastructure/: Cargo.toml
libs/infrastructure/src/: agent_profiles.rs  arch.rs  branch_strategy.rs  code_profile_builder.rs  codex_common.rs  codex_planner.rs  conventions.rs  demo.rs  domain_types_render.rs  file_port.rs  gh_cli.rs  git_cli.rs  guides_codec.rs  impl_catalog_signal_reader.rs  impl_plan_codec.rs  impl_plan_reader.rs  lib.rs  pr_review.rs  ref_verify.rs  review_adapters.rs  review_group_policy.rs  review_json_codec.rs  review_json_store.rs  schema_export.rs  schema_export_codec.rs  schema_export_tests.rs  signal_layer_reader.rs  task_contract_codec.rs  task_contract_reader.rs  task_coverage_codec.rs  type_catalogue_render.rs  verify_adapter.rs
libs/infrastructure/src/adr_decision/: adapter.rs  dto.rs  error.rs  git_blob_adapter.rs  (+3 more)
libs/infrastructure/tests/: catalogue_lint_shipped_config.rs  concurrency.rs  contract_map_layer_agnostic.rs  schema_compat.rs  semantic_dup_index.rs  sequential_updates.rs
libs/usecase/: Cargo.toml
libs/usecase/src/: arch.rs  baseline_graph_workflow.rs  branch_strategy.rs  catalogue_lint_workflow.rs  catalogue_spec_refs.rs  catalogue_spec_signals.rs  catalogue_traversal.rs  commit_hash_persistence.rs  contract_map_workflow.rs  conventions.rs  d4_orchestration.rs  demo.rs  dry_driver.rs  export_schema.rs  file.rs  fixpoint_resolve.rs  git_workflow.rs  guard.rs  hook.rs  hook_dispatch.rs  lib.rs  merge_gate.rs  planner.rs  pr.rs  pr_review.rs  pr_review_polling.rs  pr_workflow.rs  pre_commit_type_signals.rs  pre_review_gate.rs  ref_verify.rs  review_workflow.rs  semantic_dup.rs  semantic_dup_driver.rs  signal_gate.rs  signal_service.rs  skill_compliance.rs  spec_adr_signal.rs  task_completion.rs  task_ops.rs  telemetry.rs  (+7 more)
(+3099 files in other folders)
