[workspace]
members = [
  "libs/domain",
  "libs/usecase",
  "libs/infrastructure",
  "apps/cli",
]
exclude = ["vendor/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[workspace.dependencies]
globset = "0.4"
mockall = "0.13"
regex = "1"
rstest = "0.26.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
nutype = "0.6"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
toml = "1"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
indexing_slicing = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"

[patch.crates-io]
conch-parser = { path = "vendor/conch-parser" }
