[package]
name = "cli_composition"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dev-dependencies]
infrastructure = { path = "../../libs/infrastructure", features = ["test-helpers"] }
tempfile = "3.27.0"

[dependencies]
domain = { path = "../../libs/domain" }
infrastructure = { path = "../../libs/infrastructure" }
serde_json = "1.0.149"
usecase = { path = "../../libs/usecase" }
