[package]
name = "cli_composition"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dev-dependencies]
infrastructure = { path = "../../libs/infrastructure", features = ["test-helpers"] }
tempfile = "3.27.0"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
domain = { path = "../../libs/domain" }
infrastructure = { path = "../../libs/infrastructure" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
usecase = { path = "../../libs/usecase" }
