[package]
name = "cli_composition"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dev-dependencies]
infrastructure = { path = "../../libs/infrastructure", features = ["test-helpers"] }
mockall = "0.13"
temp-env = "0.3"
tempfile = "3.27.0"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
domain = { path = "../../libs/domain" }
infrastructure = { path = "../../libs/infrastructure" }
fs4 = "0.13.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tempfile = "3.27.0"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
usecase = { path = "../../libs/usecase" }
