[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "sotp"
path = "src/main.rs"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"

[dependencies]
clap = { version = "4.5.60", features = ["derive", "env"] }
domain = { path = "../../libs/domain" }
infrastructure = { path = "../../libs/infrastructure" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
usecase = { path = "../../libs/usecase" }
