[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "sotp"
path = "src/main.rs"

[lints]
workspace = true

[dev-dependencies]
rstest = { workspace = true }
tempfile = "3.27.0"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
domain = { path = "../../libs/domain" }
infrastructure = { path = "../../libs/infrastructure" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
thiserror = { workspace = true }
usecase = { path = "../../libs/usecase" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_IO"] }
