[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
domain = { path = "../../libs/domain" }
infrastructure = { path = "../../libs/infrastructure" }
usecase = { path = "../../libs/usecase" }
