[package]
name = "domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
nutype = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
