[package]
name = "domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
globset = { workspace = true }
serde = { version = "1", features = ["derive"] }
nutype = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
