[package]
name = "domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
globset = { workspace = true }
rustdoc-types = "0.57"
strum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serde_json = "1"
