[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
domain = { path = "../domain" }
fd-lock = "4.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror.workspace = true

[dev-dependencies]
rstest = { workspace = true }
tempfile = "3.27.0"
