[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
conch-parser = "0.1.1"
domain = { path = "../domain" }
proc-macro2 = { version = "1", features = ["span-locations"] }
usecase = { path = "../usecase" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
syn = { version = "2", features = ["full", "visit"] }
regex.workspace = true
thiserror.workspace = true
toml.workspace = true
sha2 = "0.10.9"
fs4 = "0.13.1"

[dev-dependencies]
rstest = { workspace = true }
tempfile = "3.27.0"
