[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[features]
# Exposes internal test-helpers (e.g. ClaudeReviewer::with_bin) as public API.
# Enable only in dev-dependencies of dependent crates that need these helpers.
test-helpers = []

[lints]
workspace = true

[dependencies]
arrow-array = "58"
arrow-schema = "58"
chrono = { version = "0.4.44", features = ["serde"] }
conch-parser = "0.1.1"
domain = { path = "../domain" }
fastembed = "5.14"
futures = "0.3"
lancedb = "0.30"
ort = "=2.0.0-rc.12"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
usecase = { path = "../usecase" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
syn = { version = "2", features = ["full", "visit"] }
regex.workspace = true
thiserror.workspace = true
toml.workspace = true
rustdoc-types = "0.57"
sha2 = "0.10.9"
fs4 = "0.13.1"
globset = { workspace = true }
libc = "0.2.183"

[dev-dependencies]
rstest = { workspace = true }
tempfile = "3.27.0"
