[package]
name = "usecase"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
domain = { path = "../domain" }
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = "3.27.0"
